--- a/Quizmaster/end/end.html
+++ b/Quizmaster/end/end.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONGRATS</title>
-    <link rel="icon" type="image/png" href="./Qlogo.png">    
+    <link rel="icon" type="image/png" href="../Qlogo.png">    
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.0.2/dist/tailwind.min.css" rel="stylesheet">    
     <link rel="stylesheet" href="../index/app.css">
     <link rel="stylesheet" href="./end.css">
