--- a/Quizmaster/game/game.html
+++ b/Quizmaster/game/game.html
@@ -39,7 +39,7 @@
             
                     </div>
                     <div id="question-bubbles"  class="flex flex-wrap justify-center mx-auto pb-2  max-w-xs"></div>
-                    <div  id="progress-bar" class="mx-auto flex items-center  progress-bar-striped progress-bar-animated">
+                    <div  id="progress-bar" class="mx-auto flex items-center justify-start progress-bar-striped progress-bar-animated">
                         <div id="progress-bar-full"  class  ="flex  justify-center items-center">
                             fjhgfghjhgfghjhgfdfgh
                         </div>    
